# tut_ws

install/: local_setup.sh  setup.sh
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/cmake/: diff_drive_robot_gz_simConfig.cmake
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/launch/: MRobot_control.launch.py  MRobot_sensor.launch.py  ros_gz_bridge.launch.py
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/map/: office_ICTE4001_sim.pgm  office_ICTE4001_sim.yaml
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/rviz/: view_robot_mapping_and_navigation.rviz  view_robot_sensor.rviz
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/urdf/: ICTE4001_MRobot_control.urdf.xacro  ICTE4001_MRobot_sensor.urdf.xacro
install/diff_drive_robot_gz_sim/share/diff_drive_robot_gz_sim/world/: office_world.sdf
install/iar_amcl_node/share/ament_index/resource_index/package_run_dependencies/: iar_amcl_node
install/iar_amcl_node/share/iar_amcl_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/iar_amcl_node/share/iar_amcl_node/config/: localisation.yaml
install/iar_amcl_node/share/iar_amcl_node/map/: office_ICTE4001_sim.yaml
install/iar_amcl_sensor_model/share/iar_amcl_sensor_model/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/iar_amcl_sensor_model/share/iar_amcl_sensor_model/launch/: localisation_launch.py
install/iar_dijkstra_planner/include/iar_dijkstra_planner/: iar_dijkstra_planner.hpp  visibility_control.h
install/iar_dijkstra_planner/share/ament_index/resource_index/package_run_dependencies/: iar_dijkstra_planner
install/iar_dijkstra_planner/share/iar_dijkstra_planner/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/iar_dijkstra_planner/share/iar_dijkstra_planner/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake
install/robot_motion_controller/lib/robot_motion_controller/: person_follower  wall_follower
install/robot_motion_controller/share/robot_motion_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_motion_controller/share/robot_motion_controller/cmake/: robot_motion_controllerConfig.cmake
log/: latest_build
src/diff_drive_robot_gz_sim/: CMakeLists.txt  package.xml
src/diff_drive_robot_gz_sim/config/: mobile_base_control.yaml
src/diff_drive_robot_gz_sim/launch/: ICTE4001_MRobot.launch.py  MRobot_base.launch.py  MRobot_sensor.launch.py
src/diff_drive_robot_gz_sim/rviz/: view_robot.rviz
src/diff_drive_robot_gz_sim/urdf/: ICTE4001_MRobot_base.urdf.xacro  ICTE4001_MRobot_sensor.urdf.xacro
src/diff_drive_robot_gz_sim/world/office_wall/: model.config  model.sdf
src/iar_amcl_node/: CMakeLists.txt
src/iar_amcl_node/include/iar_amcl_node/: iar_amcl_node.hpp  iar_diffdrive_motion_model.hpp
src/iar_amcl_node/launch/: localisation_launch.py
src/iar_amcl_node/map/: office_ICTE4001_sim.pgm
src/iar_amcl_node/src/: beam_model.cpp  iar_amcl_node.cpp  iar_diffdrive_motion_model.cpp  main.cpp
src/iar_amcl_sensor_model/: CMakeLists.txt
src/iar_amcl_sensor_model/config/: localisation.yaml
src/iar_amcl_sensor_model/include/iar_amcl/: amcl_node.hpp  beam_model.hpp
src/iar_amcl_sensor_model/src/: amcl_node.cpp  beam_model.cpp  main.cpp
src/iar_dijkstra_planner/: CMakeLists.txt  iar_dijkstra_planner.xml  package.xml
src/iar_dijkstra_planner/config/: nav2_params.yaml
src/iar_dijkstra_planner/include/iar_dijkstra_planner/: iar_dijkstra_planner.hpp  navfn.hpp
src/iar_dijkstra_planner/launch/: navigation_launch.py
src/iar_dijkstra_planner/src/: iar_dijkstra_planner.cpp  navfn.cpp
src/robot_motion_controller/: CMakeLists.txt  package.xml
src/robot_motion_controller/src/: person_follower.cpp  wall_follower.cpp
